# Smooth-Axis-Arduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  keywords.txt  library.properties
examples/01_HowToUse/Simple/: Simple.ino
examples/02_Extras/Calibration/: Calibration.ino
examples/02_Extras/Plotter/: Plotter.ino
src/: SmoothAxis.h
